chore(*): upgrade deps and fix lint errors

--- a/package.json
+++ b/package.json
@@ -80,62 +80,62 @@
     "rxjs": "^5.0.x"
   },
   "devDependencies": {
-    "@angular/animations": "^4.2.5",
-    "@angular/common": "^4.2.5",
-    "@angular/compiler": "^4.2.5",
-    "@angular/compiler-cli": "^4.2.5",
-    "@angular/core": "^4.2.5",
-    "@angular/forms": "^4.2.5",
-    "@angular/http": "^4.2.5",
-    "@angular/platform-browser": "^4.2.5",
-    "@angular/platform-browser-dynamic": "^4.2.5",
-    "@angular/platform-server": "^4.2.5",
+    "@angular/animations": "^4.3.6",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/compiler-cli": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@angular/platform-server": "^4.3.6",
     "@swimlane/ngx-ui": "^14.2.4",
-    "@types/d3-array": "1.2.0",
+    "@types/d3-array": "^1.2.1",
     "@types/d3-brush": "1.0.7",
-    "@types/d3-color": "1.0.4",
+    "@types/d3-color": "^1.0.5",
     "@types/d3-force": "1.0.7",
-    "@types/d3-format": "1.2.0",
+    "@types/d3-format": "^1.2.1",
     "@types/d3-hierarchy": "1.1.0",
-    "@types/d3-interpolate": "1.1.5",
-    "@types/d3-scale": "1.0.8",
-    "@types/d3-selection": "1.0.15",
-    "@types/d3-shape": "1.1.0",
-    "@types/d3-time": "1.0.5",
-    "@types/d3-time-format": "2.0.4",
-    "@types/d3-transition": "1.0.8",
-    "@types/jasmine": "2.5.41",
-    "@types/node": "^7.0.12",
+    "@types/d3-interpolate": "^1.1.6",
+    "@types/d3-scale": "^1.0.10",
+    "@types/d3-selection": "^1.1.0",
+    "@types/d3-shape": "^1.2.1",
+    "@types/d3-time": "^1.0.7",
+    "@types/d3-time-format": "^2.0.5",
+    "@types/d3-transition": "^1.1.0",
+    "@types/jasmine": "^2.5.54",
+    "@types/node": "^8.0.28",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.7.0",
-    "awesome-typescript-loader": "~3.1.2",
+    "awesome-typescript-loader": "^3.2.3",
     "clean-webpack-plugin": "^0.1.15",
     "codelyzer": "^3.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
-    "core-js": "2.4.1",
+    "core-js": "^2.5.1",
     "cpx": "^1.5.0",
-    "cross-env": "^3.1.4",
+    "cross-env": "^5.0.5",
     "css-loader": "^0.27.3",
-    "d3": "^4.2.2",
+    "d3": "^4.10.2",
     "emoji-flags": "^1.2.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.10.1",
-    "fs-extra": "^2.0.0",
-    "gh-pages": "^0.12.0",
+    "fs-extra": "^4.0.1",
+    "gh-pages": "^1.0.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
     "istanbul-instrumenter-loader": "^2.0.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.4.0",
+    "jasmine-core": "^2.8.0",
+    "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.2",
+    "karma-mocha-reporter": "^2.2.4",
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
     "node-sass": "^4.3.0",
-    "npm-run-all": "^4.0.1",
+    "npm-run-all": "^4.1.1",
     "postcss": "^5.2.11",
     "postcss-loader": "^1.2.2",
     "raw-loader": "^0.5.1",
@@ -147,18 +147,18 @@
     "style-loader": "^0.14.1",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "1.1.2",
-    "tslint": "^4.0.2",
-    "tslint-config-swimlane": "^2.0.1",
+    "tslint": "^5.7.0",
+    "tslint-config-swimlane": "^3.0.3",
     "tslint-loader": "^3.3.0",
-    "typescript": "~2.1.0",
+    "typescript": "^2.5.2",
     "uglify-js": "^2.7.5",
     "url-loader": "^0.5.7",
     "web-animations-js": "^2.2.2",
-    "webpack": "^2.2.0",
+    "webpack": "^3.5.6",
     "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^2.2.0",
     "webpack-merge": "^4.1.0",
     "webpack-notifier": "^1.5.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.17"
   }
 }
