--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npm run lint && karma start",
     "test:watch": "npm run test -- --auto-watch --no-single-run",
     "watch:test": "npm run test -- --auto-watch --no-single-run",
-    "lint": "tslint \"./src/{,**/}*.ts\" \"./demo/{,**/}*.ts\"",
+    "lint": "tslint --project tsconfig.json --config tslint.json",
     "version": "npm run release",
     "preversion": "npm test",
     "postversion": "git push && git push --tags",
@@ -90,7 +90,7 @@
     "@angular/platform-browser": "^4.3.6",
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/platform-server": "^4.3.6",
-    "@swimlane/ngx-ui": "^18.1.0",
+    "@swimlane/ngx-ui": "^18.0.6",
     "@types/d3-array": "^1.2.1",
     "@types/d3-brush": "1.0.7",
     "@types/d3-color": "^1.0.5",
