--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@angular/platform-browser-dynamic": "^5.2.5",
     "@angular/platform-server": "^5.2.5",
     "@swimlane/ngx-ui": "^20.1.0",
+    "@swimlane/prettier-config-swimlane": "^0.1.1",
     "@types/d3-array": "^1.2.1",
     "@types/d3-brush": "1.0.7",
     "@types/d3-color": "^1.0.5",
@@ -139,6 +140,7 @@
     "npm-run-all": "^4.1.1",
     "postcss": "^5.2.11",
     "postcss-loader": "^1.2.2",
+    "prettier": "^1.12.1",
     "raw-loader": "^0.5.1",
     "replace": "^0.3.0",
     "rimraf": "^2.5.2",
@@ -149,6 +151,7 @@
     "to-string-loader": "^1.1.5",
     "ts-helpers": "1.1.2",
     "tslint": "^5.7.0",
+    "tslint-config-prettier": "^1.12.0",
     "tslint-config-swimlane": "^3.0.3",
     "tslint-loader": "^3.3.0",
     "typescript": "2.5.2",
