--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-charts",
-  "version": "7.3.0",
+  "version": "7.4.0",
   "description": "Declarative Charting Framework for Angular2 and beyond!",
   "main": "release/index.js",
   "typings": "release/index.d.ts",
@@ -31,11 +31,13 @@
     "start:host": "webpack-dev-server --host 0.0.0.0",
     "start:hmr": "webpack-dev-server --env.HMR",
     "release": "npm-run-all build:release",
-    "package": "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
+    "package":
+      "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
     "package:ts": "tsc --outDir release",
     "package:aot": "ngc -p tsconfig-aot.json",
     "package:replace-scss": "node ./config/replace-scss.js",
-    "package:minify": "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
+    "package:minify":
+      "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
     "deploy": "node ./config/deploy.js",
     "profile": "NODE_ENV=production webpack --profile --json > dist/stats.json"
   },
@@ -60,15 +62,10 @@
     "viz",
     "graph"
   ],
-  "authors": [
-    "Austin McDaniel",
-    "Marjan Georgiev",
-    "Jayson Harshbarger"
-  ],
+  "author": "Swimlane",
+  "contributors": ["Marjan Georgiev", "Jayson Harshbarger", "Austin McDaniel"],
   "license": "MIT",
-  "files": [
-    "release"
-  ],
+  "files": ["release"],
   "bugs": {
     "url": "https://github.com/swimlane/ngx-charts/issues"
   },
