--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve ngx-charts-demo --open",
     "hmr": "ng serve ngx-charts-demo --open --configuration hmr",
-    "build": "ng build",
+    "build": "ng build ngx-charts-demo",
     "build_lib": "ng build ngx-charts-cli",
     "copy-license": "cp LICENSE.md dist/ngx-charts-cli",
     "npm_pack": "cd dist/ngx-charts-cli && npm pack",
@@ -16,17 +16,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0",
+    "@angular/animations": "~8.2.3",
     "@angular/cdk": "^8.1.3",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/forms": "~8.2.0",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
-    "@swimlane/ngx-ui": "^26.0.0",
+    "@angular/common": "~8.2.3",
+    "@angular/compiler": "~8.2.3",
+    "@angular/core": "~8.2.3",
+    "@angular/forms": "~8.2.3",
+    "@angular/platform-browser": "~8.2.3",
+    "@angular/platform-browser-dynamic": "~8.2.3",
+    "@angular/router": "~8.2.3",
+    "@swimlane/ngx-ui": "^27.1.0",
     "@swimlane/prettier-config-swimlane": "^2.0.0",
+    "codemirror": "5.42.0",
     "@types/d3-array": "^1.2.1",
     "@types/d3-brush": "1.0.7",
     "@types/d3-color": "^1.0.5",
@@ -41,7 +42,6 @@
     "@types/d3-time-format": "^2.0.5",
     "@types/d3-transition": "^1.1.0",
     "@types/jasmine": "^2.5.54",
-    "codemirror": "5.42.0",
     "d3": "^4.10.2",
     "d3-array": "^1.2.1",
     "d3-brush": "^1.0.4",
@@ -63,11 +63,13 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.2",
-    "@angular-devkit/build-ng-packagr": "~0.802.2",
-    "@angular/cli": "~8.2.0",
-    "@angular/compiler-cli": "~8.2.0",
-    "@angular/language-service": "~8.2.0",
+    "@angular-devkit/build-angular": "~0.803.0",
+    "@angular-devkit/build-ng-packagr": "~0.803.0",
+    "@angular/cli": "~8.3.0",
+    "@angular/compiler-cli": "^8.2.3",
+    "@angular/language-service": "~8.2.3",
+    "@angular/platform-server": "^8.2.14",
+    "@angular/upgrade": "^8.2.14",
     "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
