--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,12 @@ language: node_js
 
 node_js:
   - 'node'
+  
+addons:
+  chrome: stable
 
 services:
   - xvfb
-
-before_install:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
 
 install:
   - travis_wait 30 npm install
