--- a/package.json
+++ b/package.json
@@ -28,8 +28,17 @@
     "@angular/router": "~9.0.0-rc.5",
     "@swimlane/ngx-ui": "^28.0.0-rc.3",
     "codemirror": "^5.49.2",
-    "d3": "^5.14.2",
+    "d3-array": "^2.4.0",
+    "d3-brush": "^1.1.5",
+    "d3-color": "^1.4.0",
+    "d3-format": "^1.4.2",
+    "d3-hierarchy": "^1.1.9",
+    "d3-interpolate": "^1.4.0",
+    "d3-scale": "^3.2.1",
+    "d3-selection": "^1.4.1",
     "d3-shape": "^1.3.7",
+    "d3-time-format": "^2.2.2",
+    "d3-transition": "^1.3.2",
     "emoji-flags": "^1.2.0",
     "moment-timezone": "^0.5.27",
     "ngx-moment": "^3.5.0",
