--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "npm run build:lib && ng build --prod",
     "build:lib": "ng build @swimlane/ngx-charts",
     "package": "npm run build:lib",
+    "ci": "npm run lint && npm run test:ci",
     "test": "ng test @swimlane/ngx-charts",
-    "test:ci": "ng test @swimlane/ngx-ui --watch=false --progress=false --browsers=ChromeHeadlessCI",
+    "test:ci": "ng test @swimlane/ngx-charts --watch=false --progress=false --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prepublish": "npm run package",
