Configure custom launchers

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "npm run build:lib && ng build --prod",
     "build:lib": "ng build @swimlane/ngx-charts",
     "package": "npm run build:lib",
-    "ci": "npm run lint && npm run test:ci",
+    "ci": "npm run lint && npm run test:ci && npm run prettier:ci",
     "test": "ng test @swimlane/ngx-charts",
     "test:ci": "ng test @swimlane/ngx-charts --watch=false --progress=false --browsers=ChromeHeadlessCI",
+    "prettier:ci": "prettier --check  \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prepublish": "npm run package",
