--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -7,6 +7,6 @@
   "exclude": ["test.ts", "**/*.spec.ts"],
   "angularCompilerOptions": {
     "preserveWhitespaces": true,
-    "enableIvy": true
+    "enableIvy": false
   }
 }
