Add deploy demo commands

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "npm run build:lib && ng build --prod",
     "build:lib": "ng build @swimlane/ngx-charts && npm run copy-files",
+    "build:demo": "npm run build:lib && cross-env NODE_ENV=production ng build --prod --base-href=\"/ngx-charts/\"",
     "package": "npm run build:lib",
     "copy-files": "cp README.md dist/swimlane/ngx-charts/README.md && cp LICENSE dist/swimlane/ngx-charts/LICENSE",
     "ci": "npm run lint && npm run test:ci && npm run prettier:ci",
@@ -14,6 +15,8 @@
     "prettier:ci": "prettier --check  \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "predeploy": "npm run build:demo",
+    "deploy": "angular-cli-ghpages --dir ./dist/ngx-charts --name=Swimlane --email=developer@swimlane.com",
     "prepublish": "npm run package",
     "publish": "npm publish ./dist/swimlane/ngx-charts",
     "prepack": "npm run package",
@@ -60,7 +63,9 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^0.6.1",
     "codelyzer": "^5.1.2",
+    "cross-env": "^6.0.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
