--- a/package.json
+++ b/package.json
@@ -42,16 +42,16 @@
     "d3-array": "^2.4.0",
     "d3-brush": "^1.1.5",
     "d3-color": "^1.4.0",
-    "d3-format": "^1.4.2",
+    "d3-format": "^1.4.4",
     "d3-hierarchy": "^1.1.9",
     "d3-interpolate": "^1.4.0",
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
     "d3-shape": "^1.3.7",
-    "d3-time-format": "^2.2.2",
+    "d3-time-format": "^2.2.3",
     "d3-transition": "^1.3.2",
     "emoji-flags": "^1.2.0",
-    "moment-timezone": "^0.5.27",
+    "moment-timezone": "^0.5.28",
     "ngx-moment": "^3.5.0",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.5.5",
@@ -64,30 +64,30 @@
     "@angular/cli": "^9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
-    "@swimlane/prettier-config-swimlane": "^2.0.0",
-    "@types/jasmine": "~3.3.8",
+    "@swimlane/prettier-config-swimlane": "^3.0.1",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
     "@types/json-schema": "^7.0.4",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^0.6.1",
-    "codelyzer": "^5.1.2",
-    "cross-env": "^6.0.3",
-    "jasmine-core": "~3.4.0",
+    "codelyzer": "^5.2.2",
+    "cross-env": "^7.0.2",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma": "^5.0.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "ng-packagr": "^9.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.16.4",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
+    "prettier": "^2.0.4",
+    "protractor": "^5.4.3",
+    "ts-node": "^8.8.2",
+    "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-security": "^1.16.0",
-    "tslint-config-swimlane": "^3.0.4",
-    "typescript": "~3.6.4"
+    "tslint-config-swimlane": "^5.0.0",
+    "typescript": "^3.8.3"
   }
 }
