--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "ngx-moment": "^3.5.0",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.5.5",
-    "tslib": "^1.10.0",
+    "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
@@ -69,11 +69,11 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/json-schema": "^7.0.4",
     "@types/node": "^12.11.1",
-    "angular-cli-ghpages": "^0.6.1",
+    "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^5.2.2",
     "cross-env": "^7.0.2",
     "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-spec-reporter": "^5.0.1",
     "karma": "^5.0.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
