--- a/package.json
+++ b/package.json
@@ -24,20 +24,21 @@
     "prepack": "npm run package",
     "pack": "npm pack ./dist/swimlane/ngx-charts",
     "prettier": "prettier --write \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
-    "prettier:ci": "prettier --check \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\""
+    "prettier:ci": "prettier --check \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
+    "postinstall": "ngcc"
   },
   "dependencies": {
-    "@angular/animations": "~9.1.1",
-    "@angular/cdk": "^9.2.0",
-    "@angular/common": "~9.1.1",
-    "@angular/compiler": "~9.1.1",
-    "@angular/core": "~9.1.1",
-    "@angular/flex-layout": "9.0.0-beta.29",
-    "@angular/forms": "~9.1.1",
-    "@angular/platform-browser": "~9.1.1",
-    "@angular/platform-browser-dynamic": "~9.1.1",
-    "@angular/router": "~9.1.1",
-    "@swimlane/ngx-ui": "^28.5.2",
+    "@angular/animations": "~10.0.6",
+    "@angular/cdk": "^10.1.1",
+    "@angular/common": "~10.0.6",
+    "@angular/compiler": "~10.0.6",
+    "@angular/core": "~10.0.6",
+    "@angular/flex-layout": "10.0.0-beta.32",
+    "@angular/forms": "~10.0.6",
+    "@angular/platform-browser": "~10.0.6",
+    "@angular/platform-browser-dynamic": "~10.0.6",
+    "@angular/router": "~10.0.6",
+    "@swimlane/ngx-ui": "^29.2.1",
     "codemirror": "^5.49.2",
     "d3-array": "^2.4.0",
     "d3-brush": "^1.1.5",
@@ -52,42 +53,42 @@
     "d3-transition": "^1.3.2",
     "emoji-flags": "^1.2.0",
     "moment-timezone": "^0.5.28",
-    "ngx-moment": "^3.5.0",
+    "ngx-moment": "^5.0.0",
     "resize-observer-polyfill": "^1.5.1",
-    "rxjs": "~6.5.5",
-    "tslib": "^1.11.1",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.1",
-    "@angular-devkit/build-ng-packagr": "~0.901.1",
-    "@angular/cli": "^9.1.1",
-    "@angular/compiler-cli": "~9.1.1",
-    "@angular/language-service": "~9.1.1",
+    "@angular-devkit/build-angular": "~0.1000.4",
+    "@angular-devkit/build-ng-packagr": "~0.1000.4",
+    "@angular/cli": "^10.0.4",
+    "@angular/compiler-cli": "~10.0.6",
+    "@angular/language-service": "~10.0.6",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
     "@types/json-schema": "^7.0.4",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^6.0.0",
     "cross-env": "^7.0.2",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^5.0.1",
-    "karma": "^5.0.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "ng-packagr": "^9.1.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
-    "protractor": "^5.4.3",
+    "protractor": "~7.0.0",
     "ts-node": "^8.8.2",
-    "tslint": "^6.1.1",
+    "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-security": "^1.16.0",
     "tslint-config-swimlane": "^5.0.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7"
   }
 }
