--- a/package.json
+++ b/package.json
@@ -28,32 +28,31 @@
     "postinstall": "ngcc"
   },
   "dependencies": {
-    "@angular/animations": "~10.0.6",
-    "@angular/cdk": "^10.1.1",
-    "@angular/common": "~10.0.6",
-    "@angular/compiler": "~10.0.6",
-    "@angular/core": "~10.0.6",
-    "@angular/flex-layout": "10.0.0-beta.32",
-    "@angular/forms": "~10.0.6",
-    "@angular/platform-browser": "~10.0.6",
-    "@angular/platform-browser-dynamic": "~10.0.6",
-    "@angular/router": "~10.0.6",
-    "@swimlane/ngx-ui": "^31.0.0",
+    "@angular/animations": "~11.0.5",
+    "@angular/cdk": "^11.0.3",
+    "@angular/common": "~11.0.5",
+    "@angular/compiler": "~11.0.5",
+    "@angular/core": "~11.0.5",
+    "@angular/flex-layout": "11.0.0-beta.33",
+    "@angular/forms": "~11.0.5",
+    "@angular/platform-browser": "~11.0.5",
+    "@angular/platform-browser-dynamic": "~11.0.5",
+    "@angular/router": "~11.0.5",
+    "@swimlane/ngx-ui": "^34.0.0",
     "codemirror": "^5.49.2",
-    "d3-array": "^2.4.0",
-    "d3-brush": "^1.1.5",
-    "d3-color": "^1.4.0",
-    "d3-format": "^1.4.4",
-    "d3-hierarchy": "^1.1.9",
-    "d3-interpolate": "^1.4.0",
-    "d3-scale": "^3.2.1",
-    "d3-selection": "^1.4.1",
-    "d3-shape": "^1.3.7",
-    "d3-time-format": "^2.2.3",
-    "d3-transition": "^1.3.2",
+    "d3-array": "^2.9.1",
+    "d3-brush": "^2.1.0",
+    "d3-color": "^2.0.0",
+    "d3-format": "^2.0.0",
+    "d3-hierarchy": "^2.0.0",
+    "d3-interpolate": "^2.0.1",
+    "d3-scale": "^3.2.3",
+    "d3-selection": "^2.0.0",
+    "d3-shape": "^2.0.0",
+    "d3-time-format": "^3.0.0",
+    "d3-transition": "^2.0.0",
     "emoji-flags": "^1.2.0",
     "moment-timezone": "^0.5.28",
-    "ngx-autosize-input": "^2.3.7",
     "ngx-moment": "^5.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.6.0",
@@ -61,35 +60,35 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.4",
-    "@angular-devkit/build-ng-packagr": "~0.1000.4",
-    "@angular/cli": "^10.0.4",
-    "@angular/compiler-cli": "~10.0.6",
-    "@angular/language-service": "~10.0.6",
+    "@angular-devkit/build-angular": "~0.1100.5",
+    "@angular-devkit/build-ng-packagr": "~0.1002.0",
+    "@angular/cli": "^11.0.5",
+    "@angular/compiler-cli": "~11.0.5",
+    "@angular/language-service": "~11.0.5",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
-    "@types/jasmine": "^3.5.10",
+    "@types/jasmine": "^3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/json-schema": "^7.0.4",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^6.0.0",
     "cross-env": "^7.0.2",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^10.0.0",
+    "ng-packagr": "^11.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
+    "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "ts-node": "^8.8.2",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-security": "^1.16.0",
     "tslint-config-swimlane": "^5.0.0",
-    "typescript": "^3.9.7"
+    "typescript": "~4.0.2"
   }
 }
