--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Prepare and deploy
       run: |
         npm run deploy -- --name="Swimlane" --email="swimlane-devops@swimlane.com" --no-silent
+      if: ${{ github.ref == 'refs/heads/master' }}
       env:
         CI: true
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
