--- a/projects/swimlane/ngx-charts/package.json
+++ b/projects/swimlane/ngx-charts/package.json
@@ -56,6 +56,7 @@
     "d3-shape": "^2.0.0",
     "d3-time-format": "^3.0.0",
     "d3-transition": "^2.0.0",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "@types/d3-shape": "^2.0.0"
   }
 }
