--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "d3-array": "^2.9.1",
     "d3-brush": "^2.1.0",
     "d3-color": "^2.0.0",
+    "d3-ease": "^2.0.0",
     "d3-format": "^2.0.0",
     "d3-hierarchy": "^2.0.0",
     "d3-interpolate": "^2.0.1",
@@ -67,7 +68,13 @@
     "@angular/compiler-cli": "~12.1.0",
     "@angular/language-service": "~12.1.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
-    "@types/d3-shape": "^2.0.0",
+    "@types/d3-array": "^2.12.1",
+    "@types/d3-ease": "^2.0.0",
+    "@types/d3-interpolate": "^2.0.0",
+    "@types/d3-scale": "^3.3.0",
+    "@types/d3-selection": "^2.0.0",
+    "@types/d3-shape": "^2.1.0",
+    "@types/d3-transition": "^2.0.0",
     "@types/jasmine": "^3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/json-schema": "^7.0.4",
