--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "postinstall": "ngcc"
   },
   "dependencies": {
-    "@angular/animations": "~12.1.0",
-    "@angular/cdk": "^12.1.0",
-    "@angular/common": "~12.1.0",
-    "@angular/compiler": "~12.1.0",
-    "@angular/core": "~12.1.0",
-    "@angular/flex-layout": "12.0.0-beta.34",
-    "@angular/forms": "~12.1.0",
-    "@angular/platform-browser": "~12.1.0",
-    "@angular/platform-browser-dynamic": "~12.1.0",
-    "@angular/router": "~12.1.0",
+    "@angular/animations": "~13.1.0",
+    "@angular/cdk": "^13.1.0",
+    "@angular/common": "~13.1.0",
+    "@angular/compiler": "~13.1.0",
+    "@angular/core": "~13.1.0",
+    "@angular/flex-layout": "13.0.0-beta.36",
+    "@angular/forms": "~13.1.0",
+    "@angular/platform-browser": "~13.1.0",
+    "@angular/platform-browser-dynamic": "~13.1.0",
+    "@angular/router": "~13.1.0",
     "@swimlane/ngx-ui": "^35.6.5",
     "codemirror": "^5.49.2",
     "d3-array": "^2.9.1",
@@ -57,16 +57,16 @@
     "ng-in-viewport": "^6.1.5",
     "ngx-moment": "^5.0.0",
     "resize-observer-polyfill": "^1.5.1",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.5.3 || ^7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.0",
+    "@angular-devkit/build-angular": "~13.1.1",
     "@angular-devkit/build-ng-packagr": "~0.1002.0",
-    "@angular/cli": "^12.1.0",
-    "@angular/compiler-cli": "~12.1.0",
-    "@angular/language-service": "~12.1.0",
+    "@angular/cli": "^13.1.1",
+    "@angular/compiler-cli": "~13.1.0",
+    "@angular/language-service": "~13.1.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/d3-array": "^2.12.1",
     "@types/d3-ease": "^2.0.0",
@@ -89,7 +89,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^12.1.0",
+    "ng-packagr": "^13.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
@@ -98,6 +98,6 @@
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-security": "^1.16.0",
     "tslint-config-swimlane": "^5.0.0",
-    "typescript": "~4.3.4"
+    "typescript": "~4.5.3"
   }
 }
